--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
   "name": "tinyoutubeadblocker",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "manifest_version": 2,
   "description": "A tiny youtube adblocker",
-	"permissions": ["webRequest", "webRequestBlocking", "<all_urls>"],
+	"permissions": ["<all_urls>", "webRequest", "webRequestBlocking"],
 	"icons": {
 		"48": "icons/48.png"
 	},
 	"background": {
+    "persistent": true,
 		"scripts": ["background.js"]
 	},
 	"browser_action": {
